projects/vb6parse/snapshots/parsers/cst/control_flow/jump/gosub_return_nested_example.snap
---
source: projects/vb6parse/tests/control_flow/jump.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: GoSubStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: GoSubKeyword
                  text: GoSub
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Outer
            - kind: Newline
              text: "\n"
            - kind: ExitStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ExitKeyword
                  text: Exit
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
            - kind: Newline
              text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: Outer
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: GoSubStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: GoSubKeyword
                  text: GoSub
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Inner
            - kind: Newline
              text: "\n"
            - kind: ReturnStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ReturnKeyword
                  text: Return
            - kind: Newline
              text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: Inner
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Debug
                - kind: PeriodOperator
                  text: "."
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"nested\""
                - kind: Newline
                  text: "\n"
            - kind: ReturnStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ReturnKeyword
                  text: Return
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
